1999-07-26  Michael Hanni  <mhanni@sprintmail.com>

	* gstextnetwork.m: new test app to test NSTextView/TextNetwork.
	* Edit/*: minor fixes to use NSText directly so for the time being
	Edit.app still works somewhat.

1999-07-10  Michael Hanni  <mhanni@sprintmail.com>

	* GSImageTabViewItem.m: new file to draw a subclass of
	NSTabViewItem that puts an image into a tab.
	* nstabview.m: changed "Me" tab to also include an image.
	* Smiley.tiff: image I drew to put in a tab.

1999-07-9  Michael Hanni  <mhanni@sprintmail.com>

	* nstabview.m: this is a must see. it really works quite well.