@@ -1,5 +1,12 @@
 1999-07-26  Michael Hanni  <mhanni@sprintmail.com>
 
+	* nstabview.m: added a delegate to the nstabview. Delegate
+	responds to all selectors and gives debug information. In
+	addition, with the delegate you cannot click on the "Natalie"
+	tab, it is disabled.
+
+1999-07-24  Michael Hanni  <mhanni@sprintmail.com>
+
 	* gstextnetwork.m: new test app to test NSTextView/TextNetwork.
 	* Edit/*: minor fixes to use NSText directly so for the time being
 	Edit.app still works somewhat.
